--- a/public/index.html
+++ b/public/index.html
@@ -71,14 +71,15 @@
           </form>
           <div class="header-logo-wrapper col-auto p-0">
             <div class="logo-wrapper"><a href="index.html"><img class="img-fluid" src="../assets/svg/KJSCE-logo.svg" alt=""></a></div>
+            <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="align-center"></i></div>
           </div>
           <div class="left-header col-xxl-5 col-xl-6 col-lg-5 col-md-4 col-sm-3 p-0">
             <div class="notification-slider">
-              <div class="d-flex h-100">
-                <h6 class="mb-0 f-w-400"><span class="f-light">This is a notification slider</span></i>
+              <div class="d-flex h-100"> <img src="../assets/images/giftools.gif" alt="gif">
+                <h6 class="mb-0 f-w-400"><span class="font-primary">Don't Miss Out! </span><span class="f-light">Out new update has been release.</span></h6><i class="icon-arrow-top-right f-light"></i>
               </div>
-              <div class="d-flex h-100">
-                <h6 class="mb-0 f-w-400"><span class="f-light">Can be used as a notice board! </span></h6>
+              <div class="d-flex h-100"><img src="../assets/images/giftools.gif" alt="gif">
+                <h6 class="mb-0 f-w-400"><span class="f-light">Something you love is now on sale! </span></h6><a class="ms-1" href="https://1.envato.market/3GVzd" target="_blank">Buy now !</a>
               </div>
             </div>
           </div>
@@ -150,7 +151,6 @@
           <script class="empty-template" type="text/x-handlebars-template"><div class="EmptyMessage">Your search turned up 0 results. This most likely means the backend is down, yikes!</div></script>
         </div>
       </div>
-      <!-- Page Header Ends                              -->
       <!-- Page Body Start-->
       <div class="page-body-wrapper">
         <!-- Page Sidebar Start-->
@@ -158,6 +158,7 @@
           <div>
             <div class="logo-wrapper"><a href="index.html"><img class="img-fluid for-light" src="../assets/svg/KJSCE-logo.svg" alt=""><img class="img-fluid for-dark" src="../assets/svg/KJSCE-logo.svg" alt=""></a>
               <div class="back-btn"><i class="fa fa-angle-left"></i></div>
+              <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
             </div>
             <div class="logo-icon-wrapper"><a href="index.html"><img class="img-fluid" src="../assets/images/logo/logo-icon.png" alt=""></a></div>
             <nav class="sidebar-main">
@@ -1153,7 +1154,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-12 footer-copyright text-center">
-                <p class="mb-0">Copyright 2023 © Cuba theme by pixelstrap  </p>
+                <p class="mb-0">Copyright 2024 © KJ Somaiya College Of Engineering</p>
               </div>
             </div>
           </div>
@@ -1188,7 +1189,6 @@
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
     <script src="../assets/js/script.js"></script>
-    <script src="../assets/js/theme-customizer/customizer.js"></script>
     <script>
         // Add this script to dynamically set the user's name
         document.addEventListener('DOMContentLoaded', function () {
@@ -1228,6 +1228,5 @@
                 .catch(error => console.error('Error fetching user data:', error));
         });
     </script>
-    
   </body>
 </html>
