--- a/public/index.html
+++ b/public/index.html
@@ -74,14 +74,6 @@
             <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="align-center"></i></div>
           </div>
           <div class="left-header col-xxl-5 col-xl-6 col-lg-5 col-md-4 col-sm-3 p-0">
-            <div class="notification-slider">
-              <div class="d-flex h-100"> <img src="../assets/images/giftools.gif" alt="gif">
-                <h6 class="mb-0 f-w-400"><span class="font-primary">Don't Miss Out! </span><span class="f-light">Out new update has been release.</span></h6><i class="icon-arrow-top-right f-light"></i>
-              </div>
-              <div class="d-flex h-100"><img src="../assets/images/giftools.gif" alt="gif">
-                <h6 class="mb-0 f-w-400"><span class="f-light">Something you love is now on sale! </span></h6><a class="ms-1" href="https://1.envato.market/3GVzd" target="_blank">Buy now !</a>
-              </div>
-            </div>
           </div>
           <div class="nav-right col-xxl-7 col-xl-6 col-md-7 col-8 pull-right right-header p-0 ms-auto">
             <ul class="nav-menus">
@@ -158,7 +150,7 @@
           <div>
             <div class="logo-wrapper"><a href="index.html"><img class="img-fluid for-light" src="../assets/svg/KJSCE-logo.svg" alt=""><img class="img-fluid for-dark" src="../assets/svg/KJSCE-logo.svg" alt=""></a>
               <div class="back-btn"><i class="fa fa-angle-left"></i></div>
-              <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
+              <div class="toggle-sidebar"></div>
             </div>
             <div class="logo-icon-wrapper"><a href="index.html"><img class="img-fluid" src="../assets/images/logo/logo-icon.png" alt=""></a></div>
             <nav class="sidebar-main">
