--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
                               <li class="nav-item dropdown header-profile">
                                  <a class="nav-link" href="javascript:void(0);" role="button" data-bs-toggle="dropdown">
                                     <!-- Set the profile picture URL as the src attribute -->
-                                    <img id="profilePicture" src="<%= user.profile_picture || 'images/profile/default-profile.jpg' %>" width="20" alt=""/>
+                                    <img id="profilePicture" src="images/profile/default-profile.jpg" width="20" alt=""/>
                                  </a>
                               </li>
                            </ul>
