Secure user data retrieval and sanitization
This commit enhances the security of the user data retrieval process by implementing the following changes:

- Fetch only the necessary user data (name, email, profile_picture) from the server
- Create a sanitized user object with only the required properties
- Send the sanitized user object as the response instead of the entire user object
- Add error handling and authentication checks
- Separate the user data fetching and sanitization logic into a reusable function

By minimizing the exposed user data and following security best practices, this commit reduces the risk of sensitive information exposure and improves the overall security of the application.

--- a/public/index.html
+++ b/public/index.html
@@ -132,14 +132,11 @@
                      </div>
                      <div class="navbar-nav header-right">
                         <div class="nav-item d-flex align-items-center">
-                           <ul>
                               <li class="nav-item dropdown header-profile">
-                                 <a class="nav-link" href="javascript:void(0);" role="button" data-bs-toggle="dropdown">
                                     <!-- Set the profile picture URL as the src attribute -->
                                     <img id="profilePicture" src="images/profile/default-profile.jpg" width="20" alt=""/>
                                  </a>
                               </li>
-                           </ul>
                         </div>
                      </div>
                   </div>
@@ -205,8 +202,8 @@
                               <div class="card-body">
                                  <div class="dlab-media d-flex justify-content-between">
                                     <div class="dlab-content">
-                                       <h4>This can be used as a Notice Board</h4>
-                                       <p>As per your syllabus SVU 2020 - You have choice based courses like Department Elective, Open Elective Technical (OET), Open Elective Humanities and Management OEHM during TY Semester VI. Lorem ipsum dolor sit amet, consectetur.</p>
+                                       <h4>KJSCE OET-OEHM Portal</h4>
+                                       <p>As per your syllabus SVU 2020 - You have choice based courses like Department Elective, Open Elective Technical (OET), Open Elective Humanities and Management OEHM from SY Semester V to TY Semester VII.</p>
                                     </div>
                                     <div class="dlab-img">
                                        <img src="images/egucation-girl.png" alt="">
