--- a/public/onboarding.html
+++ b/public/onboarding.html
@@ -70,14 +70,11 @@
                   </div>
                   <div class="navbar-nav header-right">
                      <div class="nav-item d-flex align-items-center">
-                        <ul>
                            <li class="nav-item dropdown header-profile">
-                              <a class="nav-link" role="button" data-bs-toggle="dropdown">
                                  <!-- Set the profile picture URL as the src attribute -->
                                  <img id="profilePicture" src="images/profile/default-profile.jpg" width="20" alt=""/>
                               </a>
                            </li>
-                        </ul>
                      </div>
                   </div>
                </div>
@@ -257,6 +254,7 @@
                                  </fieldset>	
                                  <fieldset class="wizard-fieldset">
                                     <div class="form-group clearfix">
+                                       <h4 class="card-title">Summary</h4>
                                        <a href="javascript:;" class="form-wizard-previous-btn float-left">Previous</a>
                                        <a href="javascript:;" class="form-wizard-submit float-right">Submit</a>
                                     </div>
